add: password generator complete

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
     <div class="container">
         <h1>Automatic password generator</h1>
-        <p></p>
+        <p id="user-password"></p>
     </div>
     
 
